--- a/AboutMe.html
+++ b/AboutMe.html
@@ -22,7 +22,7 @@
 		</nav>
 		<div class="About-me" >
 			<h1 style="font-size: 25px">Muhammad Aqsam</h1>
-			<p>I am currently studying Computer Programming And Analysis (Advance diploma) at Seneca College. <br>Some of my favorite hobbies are playing Baksetball and reading about world issues.</p>
+			<p>I am currently studying Computer Programming And Analysis (Advance diploma) at Seneca College. <br>Some of my favorite hobbies are playing Basketball and reading about world issues.</p>
 		</div>
 		<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 		<script src="js/main.js"></script>
