--- a/Projects.html
+++ b/Projects.html
@@ -22,7 +22,7 @@
 		</nav>
 			<div class="Projects">
 				<p>Heres a link to my Projects i've done</p>
-				<code id="hover-github"><a href="https://www.github.com/MoAqsam">Click here</a></code>
+				<code id="hover-github"><a href="https://www.github.com/MoAqsam" target="_blank">Click here</a></code>
 			</div>
 		<script src="https://use.fontawesome.com/5be1ae553e.js"></script>
 		<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>		
