--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</div>
 			<h2 style=" border-bottom-style: dotted; border-color: black; color: white; font-display: swap; text-align: center; border-">Muhammad Aqsam</h2>
 		<div class="Links">
-		<a href="AboutMe.html">About Me</a>
+		<a href="AboutMe.html">About Me</a><br>
 		<a href="Projects.html">Projects</a>
 		</div>
 		<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
